--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   svg_flutter: ^0.0.1
+  dots_indicator: ^4.0.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.14.4"
