--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.5.3
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.0
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.14.4"
