--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_auth: ^6.0.0
   dartz: ^0.10.1
   flutter_bloc: ^9.1.1
+  get_it: ^8.1.0
+  modal_progress_hud_nsn: ^0.5.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.14.4"
