--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,13 @@ dependencies:
   svg_flutter: ^0.0.1
   dots_indicator: ^4.0.1
   shared_preferences: ^2.5.3
-  firebase_core: ^4.0.0
-  firebase_auth: ^6.0.0
+  firebase_core: ^3.0.0
+  firebase_auth: ^5.0.0 
   dartz: ^0.10.1
   flutter_bloc: ^9.1.1
   get_it: ^8.1.0
   modal_progress_hud_nsn: ^0.5.1
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.14.4"
